Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  ut-thesis.doc.tar.xz: d7c9c1f6f0c8e1009442ba79042c130b11c11770
-  ut-thesis.tar.xz: 70ec4dfa5c031cda3225a3ee1a9f8ac2f683d267
+  ut-thesis.doc.r64491.tar.xz: 78b3764d4550ef2443d0db239423d5cb2a3a7a87
+  ut-thesis.r64491.tar.xz: c267c5f5fbc9d99ae9493f239a816e4132568fb1
